--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,9 +29,11 @@
     "easymde": "^2.20.0",
     "formik": "^2.4.6",
     "formik-validator-zod": "^2.2.0",
+    "html-react-parser": "^5.2.6",
     "include-media": "^2.0.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "marked": "^16.1.1",
     "mixpanel-browser": "^2.66.0",
     "nanostores": "^1.0.1",
     "prop-types": "^15.8.1",
